<resources>
    <string name="app_name">Proyecto 1.0</string>
    <string name="title_contactos">Contactos</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_reportes">Reportes</string>
    <string name="Iniciar">Iniciar Sesion</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title">Alvelectric</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="sport_fragment">Sport Fragment</string>
    <string name="movie_fragment">Movie Fragment</string>
    <string name="tab_text_1">Empleados</string>
    <string name="tab_text_2">Proveedores</string>
</resources>
